# noodle

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.live  Dockerfile.shipper  Makefile  README.md  doc-gaps-status.md  doc-gaps.md  opencode.json  restart.sh
crates/noodle-adapters/: Cargo.toml
crates/noodle-adapters/benches/: codec_paths.rs
crates/noodle-adapters/src/: codec.rs  detector.rs  enhancer.rs  filter.rs  lib.rs  log.rs  request_detector.rs  store.rs
crates/noodle-adapters/src/dns/: codec.rs  message.rs  mod.rs  transforms.rs  wire.rs
crates/noodle-adapters/src/marking/: anthropic.rs  frame_signals.rs  frame_tree.rs  in_memory_store.rs  mod.rs  record.rs
crates/noodle-adapters/src/provider/: anthropic.rs  anthropic_content_blocks.rs  anthropic_events.rs  anthropic_layered.rs  anthropic_request_tool_results.rs  openai.rs
crates/noodle-adapters/src/request/: anthropic_messages.rs  claude_ai.rs
crates/noodle-adapters/src/sse/: codec.rs  mod.rs
crates/noodle-adapters/src/transform/: marker_strip.rs  placement.rs
crates/noodle-adapters/tests/: adr_048_sub_agent_state.rs  adr_052_frame_tree.rs  e2e_marker_strip_redaction.rs  e2e_request_enhance_seam.rs  engine_anthropic_e2e.rs
crates/noodle-adapters/tests/common/: mod.rs
crates/noodle-cert-external/: Cargo.toml
crates/noodle-cert-external/src/: lib.rs  vault.rs
crates/noodle-core/: Cargo.toml
crates/noodle-core/src/: audit.rs  cert.rs  codec.rs  config.rs  detector.rs  endpoint.rs  engine.rs  enhancer.rs  event.rs  filter.rs  layered.rs  lib.rs  marker.rs  marking.rs  probe.rs  request.rs  resolver.rs  session.rs  store.rs  stream.rs  wire.rs
crates/noodle-core/src/config/: context.rs
crates/noodle-core/src/layered/: engine.rs
crates/noodle-core/tests/: engine_pipeline.rs  marker_property.rs  resolve_pipeline.rs
crates/noodle-detect/: Cargo.toml  README.md
crates/noodle-detect/src/: context.rs  facts.rs  lib.rs  request.rs  response.rs
crates/noodle-domain/: Cargo.toml
crates/noodle-domain/src/: capability.rs  citation_ref.rs  classifier.rs  content_category.rs  envelope_metadata.rs  lib.rs  observation_context.rs  principal_identity.rs  reminder_subtype.rs  speech_act.rs  subscription_context.rs  task_plan.rs  trust_level.rs  turn_end.rs  usage.rs
crates/noodle-domain/src/decoders/: anthropic.rs  google.rs  mod.rs  openai.rs
crates/noodle-domain/tests/: anthropic_decoder_e2e.rs  e2e_anthropic_decoder_exec_claude.rs  round_trip_serde.rs  vendor_specific.rs
crates/noodle-embellish/: Cargo.toml
crates/noodle-embellish-core/: Cargo.toml
crates/noodle-embellish-core/examples/: brain_replay.rs  policy_replay.rs
crates/noodle-embellish-core/src/: brain.rs  context_weight.rs  decoded.rs  lib.rs  mapper.rs  policy.rs  reader.rs  wire_source.rs
crates/noodle-embellish/src/: embellisher.rs  lib.rs  main.rs  sqlite.rs
crates/noodle-embellish/tests/: e2e_embellish_decoder_path_exec_claude.rs  e2e_embellish_exec_claude.rs  golden_sqlite_against_s16_baseline.rs
crates/noodle-macos-tproxy/: Cargo.toml
crates/noodle-macos-tproxy/src/: flow_trace.rs  hostname_filter.rs  intercept.rs  lib.rs  tls.rs
crates/noodle-proxy/: Cargo.toml  build.rs  default-noodle.toml
crates/noodle-proxy/benches/: emit_close_path.rs
crates/noodle-proxy/src/: cert_bridge.rs  config_loader.rs  envelope.rs  external_ca.rs  flow_trace.rs  lib.rs  main.rs  mitm.rs  pending_tool_uses.rs  procurement.rs  sse.rs  wirelog.rs
crates/noodle-proxy/src/tap_setup/: debug_server.rs  mod.rs
crates/noodle-proxy/tests/: byoca_static_chain.rs  e2e_byoca_static_exec_claude.rs  e2e_cert_mint_local_exec_claude.rs  e2e_content_blocks_exec_claude.rs  e2e_enhance_directive.rs  e2e_envelope_fields_exec_claude.rs  e2e_events_field_exec_claude.rs  e2e_external_mint_vault_exec_claude.rs  e2e_filter_strips_markers.rs  e2e_forward_proxy.rs  e2e_full_attribution_loop.rs  e2e_marking_exec_claude.rs  e2e_provider_field_exec_claude.rs  e2e_redaction_exec_claude.rs  e2e_request_enhance.rs  e2e_response_body_substitution.rs  e2e_roundtrips_match_tap.rs  e2e_session_correlation.rs  e2e_side_effects_correlate_with_tap.rs  e2e_subscription_context_exec_claude.rs  e2e_tool_use_pairing_exec_claude.rs  e2e_turn_and_agent_run_ids.rs  e2e_usage_fields_exec_claude.rs  e2e_wirelog_streaming.rs  external_mint_vault_chain.rs  noodle_config_env.rs  procurement_prewarm.rs
crates/noodle-shipper/: Cargo.toml
crates/noodle-shipper/src/: cursor.rs  exporter.rs  lib.rs  main.rs  mapping.rs  otel_genai.rs  shipper.rs
crates/noodle-shipper/tests/: wiremock_otlp_receiver.rs
crates/noodle-sinks/: Cargo.toml
crates/noodle-sinks/src/: lib.rs
crates/noodle-tap/: Cargo.toml
crates/noodle-tap/src/: contract.rs  lib.rs  provider.rs  redact.rs  session.rs  sink.rs  timestamp.rs  writer.rs
crates/noodle-tap/src/source/: file_read.rs  file_tail.rs  mod.rs
crates/noodle-tap/tests/: back_pressure.rs  content_blocks_golden.rs  e2e_file_read_against_proxy_output.rs  e2e_file_read_exec_claude.rs  e2e_file_tail_exec_claude.rs  e2e_file_tail_live_proxy.rs  events_golden.rs  non_blocking.rs  shutdown_drain.rs
crates/noodle-tls/: Cargo.toml
crates/noodle-tls/src/: ca.rs  lib.rs  local.rs
crates/noodle-trace-emitter/: Cargo.toml
crates/noodle-trace-emitter/src/: lib.rs  main.rs
crates/noodle-trace-emitter/tests/: corpus_span_tree.rs
crates/noodle-viewer/: Cargo.toml
crates/noodle-viewer/assets/: placeholder.html
crates/noodle-viewer/src/: brain_observer.rs  decoders.rs  hub.rs  lib.rs  main.rs  model.rs
crates/noodle-viewer/src/adapters/: http_debug_proxy.rs  mod.rs  side_effects_jsonl_source.rs  tap_jsonl_frames_source.rs  tap_jsonl_source.rs
crates/noodle-viewer/src/ports/: debug_proxy.rs  event_source.rs  mod.rs
crates/noodle-viewer/tests/: e2e_decoded_endpoint.rs  e2e_decoded_exchange_exec_claude.rs  e2e_decoded_exchange_via_decoder.rs  e2e_viewer_exec_claude.rs  e2e_viewer_via_wiresource.rs
crates/noodle-viewer/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+415 files in other folders)
