[package]
name = "noodle-core"
description = "Domain core and ports for the noodle attribution proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bytes.workspace = true
futures.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
smallvec.workspace = true
smol_str.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
