[package]
name = "noodle-embellish-core"
description = "Pure embellishment library — tap.jsonl reader, per-provider decoder driver, and ai-telemetry v0.0.2 mapper (ADR 031; ADR 039 §4 carve-out)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
noodle-core.workspace = true
noodle-domain.workspace = true

serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

time = { workspace = true, features = ["parsing", "formatting", "macros"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
