[package]
name = "noodle-embellish"
description = "Embellishment processor — reads tap.jsonl via WireSource, enriches records, emits ai-telemetry v0.0.2 events to SQLite (ADR 031)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "noodle-embellish"
path = "src/main.rs"

[dependencies]
# Pure mapper / decoder driver / JSONL reader live in this crate
# (ADR 039 §4 carve-out 3). The binary + SQLite writer + CLI stay
# here as host-bound concerns.
noodle-embellish-core.workspace = true

# Re-exported in the public surface (TelemetryRow etc.) — direct
# deps so consumers' types resolve cleanly without reaching through
# noodle-embellish-core's transitive graph.
noodle-core.workspace = true
noodle-domain.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

# SQLite. Bundled feature ships a vendored libsqlite3 so the build is
# self-contained on macOS / linux dev hosts; no system dependency.
rusqlite = { version = "0.32", features = ["bundled"] }

# ULID for processor-minted event_id (ADR 031 §5).
ulid = "1"

# CLI surface for the standalone binary.
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
noodle-tap.workspace = true
noodle-adapters.workspace = true
noodle-proxy.workspace = true
noodle-tls.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "fs", "io-util", "time", "sync"] }

[lints]
workspace = true
