[package]
name = "noodle-sinks"
description = "File-backed and in-memory SideEffectSink adapters for the proxy host (ADR 020 §2.1; ADR 039 §4 carve-out)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
noodle-core.workspace = true

bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
smol_str.workspace = true
tracing.workspace = true

tokio = { workspace = true, features = ["macros", "rt", "sync", "time", "fs"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time", "fs"] }
tempfile = "3"

[lints]
workspace = true
